--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
         </script>
 	</head>
 	<body>
-		<canvas class="room-canvas"></canvas>
+		<video id="video" width="320" height="240" controls style="display: none">
+			<source src="./assets/mario.mp4" type="video/mp4">
+		</video>
 
-		<script type="module" src="/main.js"></script>
+		<canvas class="room-canvas"></canvas>
+		<script type="module" src="./main.js"></script>
 	</body>
 </html>
