--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 		<meta charset="utf-8">
 		<title>Tony's Room</title>
 		<style>
-			body { margin: 0; }
+			html, body { 
+				margin: 0; 
+				padding: 0;
+				width: 100%;
+				height: 100%;
+				overflow:hidden;
+			}
 
 			.room-canvas {
-				border: 4px solid red;
+				width: 100%;
+				height: 100%;
 			}
 		</style>
 
@@ -23,11 +30,19 @@
         </script>
 	</head>
 	<body>
-		<video id="video" width="320" height="240" controls style="display: none">
+		<video id="mario video" width="320" height="240" controls style="display: none">
 			<source src="./assets/mario.mp4" type="video/mp4">
 		</video>
 
-		<canvas class="room-canvas"></canvas>
+		<video id="osu video" width="320" height="240" controls style="display: none">
+			<source src="./assets/osu.mp4" type="video/mp4">
+		</video>
+
+		<video id="formula video" width="320" height="240" controls style="display: none">
+			<source src="./assets/formula.mp4" type="video/mp4">
+		</video>
+
+		<canvas class="room-canvas" id="room-canvas"></canvas>
 		<script type="module" src="./main.js"></script>
 	</body>
 </html>
