--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 			<source src="./assets/formula.mp4" type="video/mp4">
 		</video>
 
+		<!-- TODO: compress video -->
+
 		<canvas class="room-canvas" id="room-canvas"></canvas>
 		<script type="module" src="./main.js"></script>
 	</body>
