--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<source src="./assets/osu.mp4" type="video/mp4">
 		</video>
 
-		<video id="formula video" width="320" height="240" controls style="display: none">
+		<video id="formula video" width="320" height="240" controls autoplay style="display: none">
 			<source src="./assets/formula.mp4" type="video/mp4">
 		</video>
 
