--- a/index.html
+++ b/index.html
@@ -30,16 +30,24 @@
         </script>
 	</head>
 	<body>
-		<video id="mario video" width="320" height="240" controls style="display: none">
+		<video id="mario video" style="display: none">
 			<source src="./assets/mario.mp4" type="video/mp4">
 		</video>
 
-		<video id="osu video" width="320" height="240" controls style="display: none">
+		<video id="osu video" style="display: none">
 			<source src="./assets/osu.mp4" type="video/mp4">
 		</video>
 
-		<video id="formula video" width="320" height="240" controls autoplay style="display: none">
+		<video id="formula video" style="display: none">
 			<source src="./assets/formula.mp4" type="video/mp4">
+		</video>
+
+		<video id="vintage video" style="display: none">
+			<source src="./assets/vintage.mp4" type="video/mp4">
+		</video>
+
+		<video id="helmet video" style="display: none">
+			<source src="./assets/helmet.mp4" type="video/mp4">
 		</video>
 
 		<canvas class="room-canvas" id="room-canvas"></canvas>
