--- a/index.html
+++ b/index.html
@@ -9,12 +9,30 @@
 				padding: 0;
 				width: 100%;
 				height: 100%;
-				overflow:hidden;
+				/* overflow:hidden; */
 			}
 
-			.room-canvas {
+			.render-canvas {
+				display: flex;
+				z-index: 0;
 				width: 100%;
 				height: 100%;
+				/* border: 4px solid yellow; */
+			}
+
+			.buttons {
+				z-index: 1;
+				position: absolute;
+				top: 7%;
+				/* border: 4px solid red; */
+				left: 0;
+				right: 0;
+				text-align: center;
+			}
+
+			.button {
+				/* display: flex; */
+				justify-content: center;
 			}
 		</style>
 
@@ -29,28 +47,39 @@
           }
         </script>
 	</head>
+
+	<video id="mario video" style="display: none">
+		<source src="./assets/mario.mp4" type="video/mp4">
+	</video>
+
+	<video id="osu video" style="display: none">
+		<source src="./assets/osu.mp4" type="video/mp4">
+	</video>
+
+	<video id="formula video" style="display: none">
+		<source src="./assets/formula.mp4" type="video/mp4">
+	</video>
+
+	<video id="vintage video" style="display: none">
+		<source src="./assets/vintage.mp4" type="video/mp4">
+	</video>
+
+	<video id="helmet video" style="display: none">
+		<source src="./assets/helmet.mp4" type="video/mp4">
+	</video>
+
 	<body>
-		<video id="mario video" style="display: none">
-			<source src="./assets/mario.mp4" type="video/mp4">
-		</video>
+		<div class="buttons">
+			<button class="button">Home</button>
+			<button class="button">Projects</button>
+			<button class="button">Extras</button>
+			<button class="button">About</button>
 
-		<video id="osu video" style="display: none">
-			<source src="./assets/osu.mp4" type="video/mp4">
-		</video>
+		</div>
+		<canvas class="render-canvas" id="render-canvas"></canvas>
 
-		<video id="formula video" style="display: none">
-			<source src="./assets/formula.mp4" type="video/mp4">
-		</video>
 
-		<video id="vintage video" style="display: none">
-			<source src="./assets/vintage.mp4" type="video/mp4">
-		</video>
 
-		<video id="helmet video" style="display: none">
-			<source src="./assets/helmet.mp4" type="video/mp4">
-		</video>
-
-		<canvas class="room-canvas" id="room-canvas"></canvas>
 		<script type="module" src="./main.js"></script>
 	</body>
 </html>
