--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             }
           }
         </script>
+		<script type="module" src="./main.js"></script>
 	</head>
 
 	<video id="mario video" style="display: none">
@@ -70,16 +71,15 @@
 
 	<body>
 		<div class="buttons">
-			<button class="button">Home</button>
-			<button class="button">Projects</button>
-			<button class="button">Extras</button>
-			<button class="button">About</button>
+			<button class="button" onclick="home()">Home</button>
+			<button class="button" onclick="projects()">Projects</button>
+			<button class="button" onclick="extras()">Extras</button>
+			<button class="button" onclick="about()">About</button>
 
 		</div>
 		<canvas class="render-canvas" id="render-canvas"></canvas>
 
 
 
-		<script type="module" src="./main.js"></script>
 	</body>
 </html>
