--- a/index.html
+++ b/index.html
@@ -4,10 +4,35 @@
 		<meta charset="utf-8">
 		<title>Tony's Room</title>
 		<style>
-			body { margin: 0; }
+			html, body { 
+				margin: 0; 
+				padding: 0;
+				width: 100%;
+				height: 100%;
+				/* overflow:hidden; */
+			}
 
-			.room-canvas {
-				border: 4px solid red;
+			.render-canvas {
+				display: flex;
+				z-index: 0;
+				width: 100%;
+				height: 100%;
+				/* border: 4px solid yellow; */
+			}
+
+			.buttons {
+				z-index: 1;
+				position: absolute;
+				top: 7%;
+				/* border: 4px solid red; */
+				left: 0;
+				right: 0;
+				text-align: center;
+			}
+
+			.button {
+				/* display: flex; */
+				justify-content: center;
 			}
 		</style>
 
@@ -21,11 +46,40 @@
             }
           }
         </script>
-	</head>
-	<body>
-		<p>Click and drag to see preview</p>
-		<canvas class="room-canvas"></canvas>
-
 		<script type="module" src="./main.js"></script>
+	</head>
+
+	<video id="mario video" style="display: none">
+		<source src="./assets/mario.mp4" type="video/mp4">
+	</video>
+
+	<video id="osu video" style="display: none">
+		<source src="./assets/osu.mp4" type="video/mp4">
+	</video>
+
+	<video id="formula video" style="display: none">
+		<source src="./assets/formula.mp4" type="video/mp4">
+	</video>
+
+	<video id="vintage video" style="display: none">
+		<source src="./assets/vintage.mp4" type="video/mp4">
+	</video>
+
+	<video id="helmet video" style="display: none">
+		<source src="./assets/helmet.mp4" type="video/mp4">
+	</video>
+
+	<body>
+		<div class="buttons">
+			<button class="button" onclick="home()">Home</button>
+			<button class="button" onclick="projects()">Projects</button>
+			<button class="button" onclick="extras()">Extras</button>
+			<button class="button" onclick="about()">About</button>
+
+		</div>
+		<canvas class="render-canvas" id="render-canvas"></canvas>
+
+
+
 	</body>
 </html>
