Began implementing text animations

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<button class="button" onclick="onClick(2)">About</button>
 		</div>
 
-		<div class="text-left" id="extras" style="display: none;">
+		<!-- <div class="text-left" id="extras" style="display: none;">
 			<p>extras</p>
 		</div>
 
@@ -55,7 +55,19 @@
 
 		<div class="text-right" id="about" style="display: none;">
 			<p>about</p>
+		</div> -->
+
+		<!-- <div class="text-left" id="extras">
+			<p>extras</p>
+		</div> -->
+
+		<div class="text-right" id="projects">
+			<p>projects</p>
 		</div>
+
+		<!-- <div class="text-right" id="about">
+			<p>about</p>
+		</div> -->
 
 		<canvas class="render-canvas" id="render-canvas"></canvas>
 
