--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<source src="./assets/vintage.mp4" type="video/mp4">
 	</video>
 
-	<video id="helmet video" style="display: none">
+	<video id="helmet video" style="display: none" loop>
 		<source src="./assets/helmet.mp4" type="video/mp4">
 	</video>
 
@@ -45,29 +45,33 @@
 			<button class="button" onclick="onClick(2)">About</button>
 		</div>
 
-		<!-- <div class="text-left" id="extras" style="display: none;">
-			<p>extras</p>
+		<div class="text-left" id="extras">
+			<p class="text" id="extras-text">extras</p>
 		</div>
-
-		<div class="text-right" id="projects" style="display: none;">
-			<p>projects</p>
-		</div>
-
-		<div class="text-right" id="about" style="display: none;">
-			<p>about</p>
-		</div> -->
-
-		<!-- <div class="text-left" id="extras">
-			<p>extras</p>
-		</div> -->
 
 		<div class="text-right" id="projects">
-			<p>projects</p>
+			<p class="text" id="projects-text">projects
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+				text text text text text text text text text text text text text text text 
+
+
+			</p>
 		</div>
 
-		<!-- <div class="text-right" id="about">
-			<p>about</p>
-		</div> -->
+		<div class="text-right" id="about">
+			<p class="text" id="about-text">about</p>
+		</div>
 
 		<canvas class="render-canvas" id="render-canvas"></canvas>
 
