--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
           }
         </script>
 		<script type="module" src="./main.js"></script>
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 	</head>
 
 	<video id="mario video" style="display: none">
@@ -33,28 +37,78 @@
 		<source src="./assets/vintage.mp4" type="video/mp4">
 	</video>
 
-	<video id="helmet video" style="display: none">
+	<video id="helmet video" style="display: none" loop>
 		<source src="./assets/helmet.mp4" type="video/mp4">
 	</video>
 
 	<body>
 		<div class="buttons">
-			<button class="button" onclick="onClick(-1)">Home</button>
-			<button class="button" onclick="onClick(0)">Projects</button>
-			<button class="button" onclick="onClick(1)">Extras</button>
-			<button class="button" onclick="onClick(2)">About</button>
+			<button class="button" id="home-button" onclick="onClick(-1)">Home</button>
+			<button class="button" id="projects-button" onclick="onClick(0)">Projects</button>
+			<button class="button" id="extras-button" onclick="onClick(1)">Extras</button>
+			<button class="button" id="about-button" onclick="onClick(2)">About</button>
 		</div>
 
-		<div class="text-left" id="extras" style="display: none;">
-			<p>extras</p>
+		<div class="text-right" id="projects">
+			<p class="text" id="projects-text">
+				This Website!	June 2023 - Present<br>
+				●	Incorporates a detailed 1:1 model of my room created with a 3D graphics software (Blender)<br>
+				●	Developed using Three.js JavaScript library for graphics rendering in a web browser<br>
+				●	Work in progress – interactive preview available<br>
+				<br>
+				<button class="media-button" onclick="playPause(0)"><img id="osu-button" src="assets/play.png" class="media-button-image"></button>
+				<a href="https://github.com/capecod40/osu">2D Video Game: C++</a> May 2022 - August 2022<br>
+				●	Created from scratch using modern OpenGL: no assistance from game engines or extensive graphic rendering libraries<br>
+				<button class="media-button" onclick="stop(0)"><img src="assets/stop.png" class="media-button-image"></button>
+				●	Designed with low coupling between graphic rendering pipeline and game design interface: new maps and levels in the game can be created without knowledge of the graphic rendering process<br>
+				●	Created modular data structures to handle entire graphic rendering pipeline and customized shaders using OpenGL Shading Language (GLSL)<br>
+				●	Developed using Visual Studio with lightweight tools, including GLAD OpenGL loading library, GLFW for window creation, and GLM math library<br>
+				<br>
+				<button class="media-button" onclick="playPause(1)"><img id="mario-button" src="assets/play.png" class="media-button-image"></button>
+				<a href="https://github.com/J0ELh/2DPlatformer">Mario Bros. Group Project: Unity</a> May 2023<br>
+				●	Classic single-player platformer with an interactable environment, simple enemy logic, and score tracking<br>
+				<button class="media-button" onclick="stop(1)"><img src="assets/stop.png" class="media-button-image"></button>
+				●	Created C# scripts for all sprite and character animations, game logic, and scene management<br>
+				●	Replicated level design and animations from the original NES platformer<br>
+				●	Work in progress – developed using Unity<br>
+				<br>
+				<a href="https://github.com/capecod40/FileBackup">File Backup: Java Application</a>	September 2022 - December 2022<br>
+				●	Simple application that allows users to create a backup of a file or directory with a persistent logging system using JSON files<br>
+				●	Implemented modular and low-coupling code design that separates UI, data persistence, and app functionality<br>
+				●	Followed a consistent and well-documented four-month development process using Git and GitHub<br>
+				●	Developed using IntelliJ IDEA with Swing for GUI and JUnit 5 for testing
+
+			</p>
 		</div>
 
-		<div class="text-right" id="projects" style="display: none;">
-			<p>projects</p>
+		<div class="text-left" id="extras">
+			<p class="text" id="extras-text">
+				<a href="https://www.caccautosport.org/">CACC Competition Race License (Novice)</a><br>
+				<a href="https://www.sccbc.net/">Sports Car Club of British Columbia Member</a><br>
+				<a href="https://www.snowpro.com/en/?page=index">CSIA Level 1 Ski Instructor Certification</a><br>
+				<!-- <a href="">Lift Operator – Grouse Mountain Resort</a> March 2023 – April 2023 -->
+				Lift Operator – Grouse Mountain Resort March 2023 – April 2023
+				
+			</p>
 		</div>
 
-		<div class="text-right" id="about" style="display: none;">
-			<p>about</p>
+		<div class="text-right" id="about">
+			<p class="text" id="about-text">
+				Tony Zhang<br>
+				Computer Science Major, 3rd Year<br>
+				236-412-6987	tonyzh1120@gmail.com	https://github.com/capecod40<br>
+				<br>
+				UNIVERSITY OF BRITISH COLUMBIA	September 2022 – Present<br>
+				Bachelor of Science, Computer Science Major<br>
+				●	GPA (4.33/4.33)<br>
+				●	Expected graduation: April 2025<br>
+				<br>
+				DOUGLAS COLLEGE	September 2021 – August 2022<br>
+				Engineering Foundations Certificate (transferred to UBC) <br>
+				●	GPA (4.30/4.33)<br>
+				●	Dean’s List, Microserve Scholarship, M.H. (Bill) Morfey Scholarship
+
+			</p>
 		</div>
 
 		<canvas class="render-canvas" id="render-canvas"></canvas>
