--- a/index.html
+++ b/index.html
@@ -50,50 +50,74 @@
 		</div>
 
 		<div class="text-right" id="projects">
-			<p class="text" id="projects-text">
-				This Website!	June 2023 - Present<br>
-				●	Incorporates a detailed 1:1 model of my room created with a 3D graphics software (Blender)<br>
-				●	Developed using Three.js JavaScript library for graphics rendering in a web browser<br>
-				●	Work in progress – interactive preview available<br>
-				<br>
-				<button class="media-button" onclick="playPause(0)"><img id="osu-button" src="assets/play.png" class="media-button-image"></button>
-				<a href="https://github.com/capecod40/osu">2D Video Game: C++</a> May 2022 - August 2022<br>
-				●	Created from scratch using modern OpenGL: no assistance from game engines or extensive graphic rendering libraries<br>
-				<button class="media-button" onclick="stop(0)"><img src="assets/stop.png" class="media-button-image"></button>
-				●	Designed with low coupling between graphic rendering pipeline and game design interface: new maps and levels in the game can be created without knowledge of the graphic rendering process<br>
-				●	Created modular data structures to handle entire graphic rendering pipeline and customized shaders using OpenGL Shading Language (GLSL)<br>
-				●	Developed using Visual Studio with lightweight tools, including GLAD OpenGL loading library, GLFW for window creation, and GLM math library<br>
-				<br>
-				<button class="media-button" onclick="playPause(1)"><img id="mario-button" src="assets/play.png" class="media-button-image"></button>
-				<a href="https://github.com/J0ELh/2DPlatformer">Mario Bros. Group Project: Unity</a> May 2023<br>
-				●	Classic single-player platformer with an interactable environment, simple enemy logic, and score tracking<br>
-				<button class="media-button" onclick="stop(1)"><img src="assets/stop.png" class="media-button-image"></button>
-				●	Created C# scripts for all sprite and character animations, game logic, and scene management<br>
-				●	Replicated level design and animations from the original NES platformer<br>
-				●	Work in progress – developed using Unity<br>
-				<br>
-				<a href="https://github.com/capecod40/FileBackup">File Backup: Java Application</a>	September 2022 - December 2022<br>
-				●	Simple application that allows users to create a backup of a file or directory with a persistent logging system using JSON files<br>
-				●	Implemented modular and low-coupling code design that separates UI, data persistence, and app functionality<br>
-				●	Followed a consistent and well-documented four-month development process using Git and GitHub<br>
-				●	Developed using IntelliJ IDEA with Swing for GUI and JUnit 5 for testing
+			<div class="content">
+				<div class="left-side">
+					<a href="https://github.com/capecod40/personal-website">
+						<img class="card" src="https://github-readme-stats.vercel.app/api/pin/?username=capecod40&repo=personal-website&border_color=7F3FBF&bg_color=0D1117&title_color=C9D1D9&text_color=8B949E&icon_color=7F3FBF">
+					</a>
+				</div>
+				<div class="icons">
+					<a href="https://threejs.org/"><img class="icon" src="./assets/icons/threejs.png"></a>
+					<a href="https://www.blender.org/"><img class="icon" src="./assets/icons/blender.png" style="width: 50%; padding-bottom: 3%;"></a><br>
+					<img class="icon" src="./assets/icons/html-5.png" style="padding-top:0;">
+					<img class="icon" src="./assets/icons/css-3.png" style="padding-top:0;">
+					<img class="icon" src="./assets/icons/js.png" style="padding-top:0;">
+				</div><br>
 
-			</p>
+				<div class="left-side">
+					<div class="media-buttons">
+						<button class="media-button" onclick="playPause(0)"><img id="osu-button" src="assets/play.png" class="media-button-image"></button><br>
+						<button class="media-button" onclick="stop(0)" style="top: 5%;"><img src="assets/stop.png" class="media-button-image"></button>
+					</div>
+					<a href="https://github.com/capecod40/osu">
+						<img class="card" src="https://github-readme-stats.vercel.app/api/pin/?username=capecod40&repo=osu&border_color=7F3FBF&bg_color=0D1117&title_color=C9D1D9&text_color=8B949E&icon_color=7F3FBF&theme=transparent">
+					</a>
+				</div>
+				<div class="icons" style="padding-top:1%">
+					<a href="https://www.opengl.org/"><img class="icon" src="./assets/icons/opengl.png" style="width: 30%"></a>
+					<a href="https://visualstudio.microsoft.com/"><img class="icon" src="./assets/icons/vs.png" style="width: 30%;"></a><br>
+					<img class="icon" src="./assets/icons/c++.png" style="padding-top:0;">
+				</div><br>
+
+				<div class="left-side">
+					<div class="media-buttons">
+						<button class="media-button" onclick="playPause(1)"><img id="mario-button" src="assets/play.png" class="media-button-image"></button>
+						<button class="media-button" onclick="stop(1)"><img src="assets/stop.png" class="media-button-image"></button>
+					</div>
+					<a href="https://github.com/capecod40/super-mario">
+						<img class="card" src="https://github-readme-stats.vercel.app/api/pin/?username=capecod40&repo=super-mario&border_color=7F3FBF&bg_color=0D1117&title_color=C9D1D9&text_color=8B949E&icon_color=7F3FBF&theme=transparent">
+					</a>
+				</div>
+				<div class="icons" style="padding-top:1%">
+					<a href="https://unity.com/"><img class="icon" src="./assets/icons/unity.png" style="width:50%;"></a><br>
+					<img class="icon" src="./assets/icons/csharp.png" style="padding-top:0;">
+				</div><br>
+				
+				<div class="left-side">
+					<a href="https://github.com/capecod40/FileBackup">
+						<img class="card" src="https://github-readme-stats.vercel.app/api/pin/?username=capecod40&repo=FileBackup&border_color=7F3FBF&bg_color=0D1117&title_color=C9D1D9&text_color=8B949E&icon_color=7F3FBF&theme=transparent">
+					</a>
+				</div>
+				<div class="icons" style="padding-top:3.5%">
+					<a href="https://www.jetbrains.com/idea/"><img class="icon" src="./assets/icons/intellij.png" style="width:60%;"></a><br>
+					<img class="icon" src="./assets/icons/java.png" style="padding-top: 3%;">
+				</div><br>
+			</div>
 		</div>
 
 		<div class="text-left" id="extras">
-			<p class="text" id="extras-text">
+			<div class="content">
 				<a href="https://www.caccautosport.org/">CACC Competition Race License (Novice)</a><br>
 				<a href="https://www.sccbc.net/">Sports Car Club of British Columbia Member</a><br>
 				<a href="https://www.snowpro.com/en/?page=index">CSIA Level 1 Ski Instructor Certification</a><br>
 				<!-- <a href="">Lift Operator – Grouse Mountain Resort</a> March 2023 – April 2023 -->
 				Lift Operator – Grouse Mountain Resort March 2023 – April 2023
 				
-			</p>
+			</div>
 		</div>
 
 		<div class="text-right" id="about">
-			<p class="text" id="about-text">
+			<div class="content">
 				Tony Zhang<br>
 				Computer Science Major, 3rd Year<br>
 				236-412-6987	tonyzh1120@gmail.com	https://github.com/capecod40<br>
@@ -108,7 +132,7 @@
 				●	GPA (4.30/4.33)<br>
 				●	Dean’s List, Microserve Scholarship, M.H. (Bill) Morfey Scholarship
 
-			</p>
+			</div>
 		</div>
 
 		<canvas class="render-canvas" id="render-canvas"></canvas>
