Implemented time based animations speed Started loading screen + assets

--- a/index.html
+++ b/index.html
@@ -21,27 +21,14 @@
 		<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 	</head>
 
-	<video id="mario video" style="display: none">
-		<source src="./assets/mario.mp4" type="video/mp4">
-	</video>
-
-	<video id="osu video" style="display: none">
-		<source src="./assets/osu.mp4" type="video/mp4">
-	</video>
-
-	<video id="formula video" style="display: none">
-		<source src="./assets/formula.mp4" type="video/mp4">
-	</video>
-
-	<video id="vintage video" style="display: none">
-		<source src="./assets/vintage.mp4" type="video/mp4">
-	</video>
-
-	<video id="helmet video" style="display: none" loop>
-		<source src="./assets/helmet.mp4" type="video/mp4">
-	</video>
-
 	<body>
+		<div id="loading-screen">
+			<img id="windows-logo" src="./assets/windows.jpg">
+			<video id="loading-animation" autoplay muted loop>
+				<source src="./assets/loading.mp4" type="video/mp4">
+			</video>
+		</div>
+		
 		<div class="buttons">
 			<button class="button" id="home-button" onclick="onClick(-1)">Home</button>
 			<button class="button" id="projects-button" onclick="onClick(0)">Projects</button>
@@ -138,4 +125,25 @@
 		<canvas class="render-canvas" id="render-canvas"></canvas>
 
 	</body>
+
+	<video id="mario video" style="display: none">
+		<source src="./assets/mario.mp4" type="video/mp4">
+	</video>
+
+	<video id="osu video" style="display: none">
+		<source src="./assets/osu.mp4" type="video/mp4">
+	</video>
+
+	<video id="formula video" style="display: none">
+		<source src="./assets/formula.mp4" type="video/mp4">
+	</video>
+
+	<video id="vintage video" style="display: none">
+		<source src="./assets/vintage.mp4" type="video/mp4">
+	</video>
+
+	<video id="helmet video" style="display: none" loop>
+		<source src="./assets/helmet.mp4" type="video/mp4">
+	</video>
+
 </html>
