--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
 	<body>
 		<div id="loading-screen">
 			<img id="windows-logo" src="./assets/windows.jpg">
+			<div id="loading-text">
+				Loading asset:
+			</div>
 			<video id="loading-animation" autoplay muted loop>
 				<source src="./assets/loading.mp4" type="video/mp4">
 			</video>
 		</div>
 		
-		<div class="buttons">
+		<div id="buttons">
 			<button class="button" id="home-button" onclick="onClick(-1)">Home</button>
 			<button class="button" id="projects-button" onclick="onClick(0)">Projects</button>
 			<button class="button" id="extras-button" onclick="onClick(1)">Extras</button>
