--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<script src="https://kit.fontawesome.com/776ecbd439.js" crossorigin="anonymous"></script>
 	</head>
 
 	<body>
 		<div id="loading-screen">
 			<img id="windows-logo" src="./assets/windows.jpg">
 			<div id="loading-text">
-				Loading asset:
+				Loading assets...
 			</div>
 			<video id="loading-animation" autoplay muted loop>
 				<source src="./assets/loading.mp4" type="video/mp4">
@@ -34,93 +36,123 @@
 		
 		<div id="buttons">
 			<button class="button" id="home-button" onclick="onClick(-1)">Home</button>
+			<button class="button" id="about-button" onclick="onClick(2)">About</button>
 			<button class="button" id="projects-button" onclick="onClick(0)">Projects</button>
 			<button class="button" id="extras-button" onclick="onClick(1)">Extras</button>
-			<button class="button" id="about-button" onclick="onClick(2)">About</button>
 		</div>
 
 		<div class="text-right" id="projects">
-			<div class="content">
-				<div class="left-side">
-					<a href="https://github.com/capecod40/personal-website">
+			<div class="content" id="projects-container">
+				<div class="projects-content">
+					<p style="grid-column: 1 / -1;margin:0;">This Website</p>
+					<a href="https://github.com/capecod40/personal-website" style="text-align: center;">
 						<img class="card" src="https://github-readme-stats.vercel.app/api/pin/?username=capecod40&repo=personal-website&border_color=7F3FBF&bg_color=0D1117&title_color=C9D1D9&text_color=8B949E&icon_color=7F3FBF">
 					</a>
-				</div>
-				<div class="icons">
-					<a href="https://threejs.org/"><img class="icon" src="./assets/icons/threejs.png"></a>
-					<a href="https://www.blender.org/"><img class="icon" src="./assets/icons/blender.png" style="width: 50%; padding-bottom: 3%;"></a><br>
-					<img class="icon" src="./assets/icons/html-5.png" style="padding-top:0;">
-					<img class="icon" src="./assets/icons/css-3.png" style="padding-top:0;">
-					<img class="icon" src="./assets/icons/js.png" style="padding-top:0;">
-				</div><br>
-
-				<div class="left-side">
-					<div class="media-buttons">
-						<button class="media-button" onclick="playPause(0)"><img id="osu-button" src="assets/play.png" class="media-button-image"></button><br>
-						<button class="media-button" onclick="stop(0)" style="top: 5%;"><img src="assets/stop.png" class="media-button-image"></button>
+					<div class="icons">
+						<a href="https://threejs.org/"><img class="icon" src="./assets/icons/threejs.png"></a>
+						<a href="https://www.blender.org/"><img class="icon" src="./assets/icons/blender.png"></a><br>
+						<img class="icon" src="./assets/icons/html-5.png" style="padding-top:0;">
+						<img class="icon" src="./assets/icons/css-3.png" style="padding-top:0;">
+						<img class="icon" src="./assets/icons/js.png" style="padding-top:0;">
 					</div>
-					<a href="https://github.com/capecod40/osu">
+				</div>
+
+				<div class="projects-content">
+					<div style="grid-column: 1 / -1; text-align: center;">
+						<p style="margin:0;">2D Video Game</p>
+						<div class="media-buttons">
+							<button class="media-button" onclick="playPause(0)"><img id="osu-button" src="assets/play.png" class="media-button-image"></button>
+							<button class="media-button" onclick="stop(0)"><img src="assets/stop.png" class="media-button-image"></button>
+						</div>
+					</div>
+					<a href="https://github.com/capecod40/osu" style="text-align: center;">
 						<img class="card" src="https://github-readme-stats.vercel.app/api/pin/?username=capecod40&repo=osu&border_color=7F3FBF&bg_color=0D1117&title_color=C9D1D9&text_color=8B949E&icon_color=7F3FBF&theme=transparent">
 					</a>
-				</div>
-				<div class="icons" style="padding-top:1%">
-					<a href="https://www.opengl.org/"><img class="icon" src="./assets/icons/opengl.png" style="width: 30%"></a>
-					<a href="https://visualstudio.microsoft.com/"><img class="icon" src="./assets/icons/vs.png" style="width: 30%;"></a><br>
-					<img class="icon" src="./assets/icons/c++.png" style="padding-top:0;">
-				</div><br>
-
-				<div class="left-side">
-					<div class="media-buttons">
-						<button class="media-button" onclick="playPause(1)"><img id="mario-button" src="assets/play.png" class="media-button-image"></button>
-						<button class="media-button" onclick="stop(1)"><img src="assets/stop.png" class="media-button-image"></button>
+					<div class="icons">
+						<a href="https://www.opengl.org/"><img class="icon" src="./assets/icons/opengl.png" style="padding-bottom: 3%; margin-right: -1%; width:20%"></a>
+						<a href="https://visualstudio.microsoft.com/"><img class="icon" src="./assets/icons/vs.png"></a>
+						<img class="icon" src="./assets/icons/c++.png" style="padding-top:0;">
 					</div>
-					<a href="https://github.com/capecod40/super-mario">
+				</div>
+
+				<div class="projects-content">
+					<div style="grid-column: 1 / -1; text-align: center;">
+						<p style="margin:0;">Super Mario Bros.</p>
+						<div class="media-buttons">
+							<button class="media-button" onclick="playPause(1)"><img id="mario-button" src="assets/play.png" class="media-button-image"></button>
+							<button class="media-button" onclick="stop(1)"><img src="assets/stop.png" class="media-button-image"></button>
+						</div>
+					</div>
+					<a href="https://github.com/capecod40/super-mario" style="text-align: center;">
 						<img class="card" src="https://github-readme-stats.vercel.app/api/pin/?username=capecod40&repo=super-mario&border_color=7F3FBF&bg_color=0D1117&title_color=C9D1D9&text_color=8B949E&icon_color=7F3FBF&theme=transparent">
 					</a>
+					<div class="icons">
+						<a href="https://unity.com/"><img class="icon" src="./assets/icons/unity.png" style="width:30%; padding-bottom: 2%;"></a>
+						<img class="icon" src="./assets/icons/csharp.png" style="padding-top:0;">
+					</div>
 				</div>
-				<div class="icons" style="padding-top:1%">
-					<a href="https://unity.com/"><img class="icon" src="./assets/icons/unity.png" style="width:50%;"></a><br>
-					<img class="icon" src="./assets/icons/csharp.png" style="padding-top:0;">
-				</div><br>
-				
-				<div class="left-side">
-					<a href="https://github.com/capecod40/FileBackup">
+
+				<div class="projects-content">
+					<p style="grid-column: 1 / -1;margin:0;">File Backup Java Application</p>
+					<a href="https://github.com/capecod40/FileBackup" style="text-align: center;">
 						<img class="card" src="https://github-readme-stats.vercel.app/api/pin/?username=capecod40&repo=FileBackup&border_color=7F3FBF&bg_color=0D1117&title_color=C9D1D9&text_color=8B949E&icon_color=7F3FBF&theme=transparent">
 					</a>
+					<div class="icons">
+						<a href="https://www.jetbrains.com/idea/"><img class="icon" src="./assets/icons/intellij.png"></a>
+						<img class="icon" src="./assets/icons/java.png">
+					</div>
 				</div>
-				<div class="icons" style="padding-top:3.5%">
-					<a href="https://www.jetbrains.com/idea/"><img class="icon" src="./assets/icons/intellij.png" style="width:60%;"></a><br>
-					<img class="icon" src="./assets/icons/java.png" style="padding-top: 3%;">
-				</div><br>
 			</div>
 		</div>
 
 		<div class="text-left" id="extras">
-			<div class="content">
-				<a href="https://www.caccautosport.org/">CACC Competition Race License (Novice)</a><br>
-				<a href="https://www.sccbc.net/">Sports Car Club of British Columbia Member</a><br>
-				<a href="https://www.snowpro.com/en/?page=index">CSIA Level 1 Ski Instructor Certification</a><br>
-				<!-- <a href="">Lift Operator – Grouse Mountain Resort</a> March 2023 – April 2023 -->
-				Lift Operator – Grouse Mountain Resort March 2023 – April 2023
-				
+			<div class="content" id="extras-container">
+				<div class="extras-content">
+					<img src="./assets/icons/cacc.png" style="width:50%;margin:auto;">
+					<a href="https://www.caccautosport.org/">CACC Competition Race License (Novice)</a>
+				</div>
+
+				<div class="extras-content">
+					<img src="./assets/icons/sccbc.png" style="width:40%;margin:auto;">
+					<a href="https://www.sccbc.net/">Sports Car Club of British Columbia Member</a>
+				</div>
+
+				<div class="extras-content">
+					<img src="./assets/icons/csia.png" style="width:80%;margin:auto;">
+					<a href="https://www.snowpro.com/en/?page=index">CSIA Level 1 Ski Instructor Certification</a>
+				</div>
+
+				<div class="extras-content">
+					<img src="./assets/icons/grouse.png" style="width:80%;margin:auto;">
+					<div>
+						<a href="https://www.grousemountain.com/">
+							Lift Operator at the Grouse Mountain Resort
+						</a><br>
+						<p style="font-size:0.8em">March 2023 - April 2023</p>
+					</div>
+				</div>
 			</div>
 		</div>
 
 		<div class="text-right" id="about">
-			<div class="content">
-				Tony Zhang<br>
-				Computer Science Major, 3rd Year<br>
-				236-412-6987	tonyzh1120@gmail.com	https://github.com/capecod40<br>
-				<br>
-				UNIVERSITY OF BRITISH COLUMBIA	September 2022 – Present<br>
-				Bachelor of Science, Computer Science Major<br>
-				●	GPA (4.33/4.33)<br>
-				●	Expected graduation: April 2025<br>
-				<br>
-				DOUGLAS COLLEGE	September 2021 – August 2022<br>
-				Engineering Foundations Certificate (transferred to UBC) <br>
-				●	GPA (4.30/4.33)<br>
-				●	Dean’s List, Microserve Scholarship, M.H. (Bill) Morfey Scholarship
+			<div class="content" style="text-align:center;">
+				<p style="font-size: 2.5em;">This is my room.</p>
+				<p style="font-size: 1.5em;">
+					Tony Zhang<br>
+					UBC Computer Science
+				</p><br>
+				<a href="https://github.com/capecod40">
+					<i class='fab fa-github' style="font-size: 1.2em;margin-right:1%;"></i>https://github.com/capecod40
+				</a><br><br>
+				<a href="https://www.linkedin.com/in/tony-zhang-09a542275/">
+					<i class='fab fa-linkedin' style="font-size: 1.2em;margin-right:1%;"></i>https://www.linkedin.com/in/tony-zhang-09a542275/
+				</a><br><br><br>
+				<!-- <a href="tel:+1236-412-6987">
+					<i class="material-icons" style="font-size: 1.2em;margin-right:1%;">phone_android</i>236-412-6987
+				</a> -->
+				<a href="mailto:tonyzh1120@gmail.com">
+					<i class="material-icons" style="font-size: 1.2em;margin-right:1%;">email</i>tonyzh1120@gmail.com
+				</a>
 			</div>
 		</div>
 
