Color changes + icons

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 		<div id="home-blocker"></div>
 
 		<div id="loading-screen">
-			<img id="windows-logo" src="./assets/windows.jpg">
+			<img id="windows-logo" src="./assets/windows.png">
 			<p class="loading-text" id="assets-text">Loading assets...</p>
 			<p class="loading-text" id="rotate-text" style="display: none;">Please rotate your device to landscape</p>
 			<p class="loading-text" id="time-text" style="display: none;">Thank you for your patience. The first startup usually takes a while.</p>
-			<video id="loading-animation" autoplay muted loop>
+			<video id="loading-animation" autoplay muted loop webkit-playsinline playsinline>
 				<source src="./assets/loading.mp4" type="video/mp4">
 			</video>
 		</div>
