Bug fixes and added labels

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 					<div style="grid-column: 1 / -1; text-align: center;">
 						<p style="margin:0;">2D Video Game</p>
 						<div class="media-buttons">
-							<button class="media-button" onclick="playPause(0)"><img id="osu-button" src="assets/play.png" class="media-button-image"></button>
-							<button class="media-button" onclick="stop(0)"><img src="assets/stop.png" class="media-button-image"></button>
+							<span class="demo-text">Play Demo:</span>
+							<button class="media-button" onclick="playPause(0)"><img id="osu-button" src="./assets/play.png" class="media-button-image"></button>
+							<button class="media-button" onclick="stop(0)"><img src="./assets/stop.png" class="media-button-image"></button>
 						</div>
 					</div>
 					<a href="https://github.com/capecod40/osu" style="text-align: center;">
@@ -82,8 +83,9 @@
 					<div style="grid-column: 1 / -1; text-align: center;">
 						<p style="margin:0;">Super Mario Bros.</p>
 						<div class="media-buttons">
-							<button class="media-button" onclick="playPause(1)"><img id="mario-button" src="assets/play.png" class="media-button-image"></button>
-							<button class="media-button" onclick="stop(1)"><img src="assets/stop.png" class="media-button-image"></button>
+							<span class="demo-text">Play Demo:</span>
+							<button class="media-button" onclick="playPause(1)"><img id="mario-button" src="./assets/play.png" class="media-button-image"></button>
+							<button class="media-button" onclick="stop(1)"><img src="./assets/stop.png" class="media-button-image"></button>
 						</div>
 					</div>
 					<a href="https://github.com/capecod40/super-mario" style="text-align: center;">
@@ -149,7 +151,7 @@
 				</a><br><br>
 				<a href="https://www.linkedin.com/in/tony-zhang-09a542275/">
 					<i class='fab fa-linkedin' style="font-size: 1.2em;margin-right:1%;"></i>https://www.linkedin.com/in/tony-zhang-09a542275/
-				</a><br><br><br>
+				</a><br><br>
 				<!-- <a href="tel:+1236-412-6987">
 					<i class="material-icons" style="font-size: 1.2em;margin-right:1%;">phone_android</i>236-412-6987
 				</a> -->
