--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Tony's Room</title>
 		<link rel="stylesheet" href="./styles.css">
-        <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+        <!-- <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
         <script type="importmap">
           {
@@ -13,7 +13,7 @@
               "three/addons/": "https://unpkg.com/three@0.153.0/examples/jsm/"
             }
           }
-        </script>
+        </script> -->
 		<script type="module" src="./main.js"></script>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com">
