--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
 					UBC Computer Science
 				</p><br>
 				<a href="https://github.com/capecod40">
-					<i class='fab fa-github' style="font-size: 1.2em;margin-right:1%;"></i>https://github.com/capecod40
+					<i class='fab fa-github' style="font-size: 1.2em;margin-right:1%;"></i>GitHub
 				</a><br><br>
 				<a href="https://www.linkedin.com/in/tony-zhang-09a542275/">
-					<i class='fab fa-linkedin' style="font-size: 1.2em;margin-right:1%;"></i>https://www.linkedin.com/in/tony-zhang-09a542275/
+					<i class='fab fa-linkedin' style="font-size: 1.2em;margin-right:1%;"></i>LinkedIn
 				</a><br><br>
 				<!-- <a href="tel:+1236-412-6987">
 					<i class="material-icons" style="font-size: 1.2em;margin-right:1%;">phone_android</i>236-412-6987
 				</a> -->
 				<a href="mailto:tonyzh1120@gmail.com">
-					<i class="material-icons" style="font-size: 1.2em;margin-right:1%;">email</i>tonyzh1120@gmail.com
+					<i class="material-icons" style="font-size: 1.2em;margin-right:1%;">email</i>Email
 				</a>
 			</div>
 		</div>
